; ModuleID = '/home/carl/AnghaBench/the_silver_searcher/src/extr_print.c_print_trailing_context.c'
source_filename = "/home/carl/AnghaBench/the_silver_searcher/src/extr_print.c_print_trailing_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i64, i64 }
%struct.TYPE_3__ = type { i64, i32, i32 }

@opts = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@print_context = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@PATH_PRINT_EACH_LINE = common dso_local global i64 0, align 8
@out_fd = common dso_local global i32 0, align 4
@INT_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_trailing_context(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8, align 1
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i8 45, i8* %7, align 1
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @opts, i32 0, i32 3), align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %3
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @opts, i32 0, i32 2), align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %3
  store i8 58, i8* %7, align 1
  br label %14

14:                                               ; preds = %13, %10
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 0), align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %38

17:                                               ; preds = %14
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 0), align 8
  %19 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @opts, i32 0, i32 0), align 8
  %20 = icmp sle i64 %18, %19
  br i1 %20, label %21, label %38

21:                                               ; preds = %17
  %22 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @opts, i32 0, i32 1), align 8
  %23 = load i64, i64* @PATH_PRINT_EACH_LINE, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %21
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @print_path(i8* %26, i8 signext 58)
  br label %28

28:                                               ; preds = %25, %21
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 2), align 4
  %30 = load i8, i8* %7, align 1
  %31 = call i32 @print_line_number(i32 %29, i8 signext %30)
  %32 = load i8*, i8** %5, align 8
  %33 = load i64, i64* %6, align 8
  %34 = load i32, i32* @out_fd, align 4
  %35 = call i32 @fwrite(i8* %32, i32 1, i64 %33, i32 %34)
  %36 = load i32, i32* @out_fd, align 4
  %37 = call i32 @fputc(i8 signext 10, i32 %36)
  br label %38

38:                                               ; preds = %28, %17, %14
  %39 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 2), align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 2), align 4
  %41 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 1), align 8
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %50, label %43

43:                                               ; preds = %38
  %44 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 0), align 8
  %45 = load i64, i64* @INT_MAX, align 8
  %46 = icmp slt i64 %44, %45
  br i1 %46, label %47, label %50

47:                                               ; preds = %43
  %48 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 0), align 8
  %49 = add nsw i64 %48, 1
  store i64 %49, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 0), align 8
  br label %50

50:                                               ; preds = %47, %43, %38
  ret void
}

declare dso_local i32 @print_path(i8*, i8 signext) #1

declare dso_local i32 @print_line_number(i32, i8 signext) #1

declare dso_local i32 @fwrite(i8*, i32, i64, i32) #1

declare dso_local i32 @fputc(i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
